# server/openapi/openapi.json
@@ -125,6 +125,27 @@
         "format" : "date-time",
         "examples" : [ "2022-03-10T12:15:50-04:00" ]
       },
+      "Operator" : {
+        "required" : [ "code", "agencyId", "name", "url", "phone" ],
+        "type" : "object",
+        "properties" : {
+          "code" : {
+            "type" : "string"
+          },
+          "agencyId" : {
+            "type" : "string"
+          },
+          "name" : {
+            "type" : [ "string", "null" ]
+          },
+          "url" : {
+            "type" : [ "string", "null" ]
+          },
+          "phone" : {
+            "type" : [ "string", "null" ]
+          }
+        }
+      },
       "PickupDropOffType" : {
         "type" : "string",
         "enum" : [ "REGULAR", "NONE", "PHONE_AGENCY", "COORDINATE_WITH_DRIVER" ]
@@ -176,7 +197,7 @@
         }
       },
       "RailLeg" : {
-        "required" : [ "type", "origin", "destination", "departureTime", "arrivalTime", "originTrainUid", "destinationTrainUid", "trainTrip", "startIndex", "endIndex", "originPickUpType", "destinationDropOffType", "operator", "duration", "boardingInterchange" ],
+        "required" : [ "type", "origin", "destination", "departureTime", "arrivalTime", "originTrainUid", "destinationTrainUid", "trainTrip", "startIndex", "endIndex", "originPickUpType", "destinationDropOffType", "operator", "transitMode", "originPlatform", "destinationPlatform", "duration", "boardingInterchange" ],
         "type" : "object",
         "properties" : {
           "origin" : {
@@ -215,7 +236,16 @@
             "$ref" : "#/components/schemas/PickupDropOffType"
           },
           "operator" : {
-            "type" : "string"
+            "$ref" : "#/components/schemas/Operator"
+          },
+          "transitMode" : {
+            "$ref" : "#/components/schemas/TransitMode"
+          },
+          "originPlatform" : {
+            "type" : [ "string", "null" ]
+          },
+          "destinationPlatform" : {
+            "type" : [ "string", "null" ]
           },
           "duration" : {
             "$ref" : "#/components/schemas/Duration"
@@ -236,7 +266,7 @@
       },
       "RailStopDateTime" : {
         "type" : "object",
-        "required" : [ "stop", "departureTime", "arrivalTime", "pickUp", "dropOff", "pickUpType", "dropOffType" ],
+        "required" : [ "stop", "departureTime", "arrivalTime", "pickUp", "dropOff", "pickUpType", "dropOffType", "platform" ],
         "properties" : {
           "stop" : {
             "type" : "string"
@@ -258,12 +288,15 @@
           },
           "dropOffType" : {
             "$ref" : "#/components/schemas/PickupDropOffType"
+          },
+          "platform" : {
+            "type" : [ "string", "null" ]
           }
         }
       },
       "RailTrainTrip" : {
         "type" : "object",
-        "required" : [ "tripId", "stopTimes", "serviceId", "agencyId", "trainUid" ],
+        "required" : [ "tripId", "stopTimes", "serviceId", "trainUid", "retailServiceId", "headsign", "transitMode" ],
         "properties" : {
           "tripId" : {
             "type" : "string"
@@ -277,11 +310,17 @@
           "serviceId" : {
             "type" : "string"
           },
-          "agencyId" : {
-            "type" : "string"
-          },
           "trainUid" : {
             "type" : [ "string", "null" ]
+          },
+          "retailServiceId" : {
+            "type" : [ "string", "null" ]
+          },
+          "headsign" : {
+            "type" : [ "string", "null" ]
+          },
+          "transitMode" : {
+            "$ref" : "#/components/schemas/TransitMode"
           }
         }
       },
@@ -362,7 +401,7 @@
         }
       },
       "SimpleRailLeg" : {
-        "required" : [ "type", "origin", "destination", "departureTime", "arrivalTime", "originTrainUid", "destinationTrainUid", "originPickUpType", "destinationDropOffType", "operator", "duration", "boardingInterchange" ],
+        "required" : [ "type", "origin", "destination", "departureTime", "arrivalTime", "originTrainUid", "destinationTrainUid", "originPickUpType", "destinationDropOffType", "operator", "transitMode", "retailServiceId", "headsign", "originPlatform", "destinationPlatform", "duration", "boardingInterchange" ],
         "type" : "object",
         "properties" : {
           "origin" : {
@@ -390,7 +429,22 @@
             "$ref" : "#/components/schemas/PickupDropOffType"
           },
           "operator" : {
-            "type" : "string"
+            "$ref" : "#/components/schemas/Operator"
+          },
+          "transitMode" : {
+            "$ref" : "#/components/schemas/TransitMode"
+          },
+          "retailServiceId" : {
+            "type" : [ "string", "null" ]
+          },
+          "headsign" : {
+            "type" : [ "string", "null" ]
+          },
+          "originPlatform" : {
+            "type" : [ "string", "null" ]
+          },
+          "destinationPlatform" : {
+            "type" : [ "string", "null" ]
           },
           "duration" : {
             "$ref" : "#/components/schemas/Duration"
@@ -408,6 +462,10 @@
             "enum" : [ "RAIL_LEG" ]
           }
         }
+      },
+      "TransitMode" : {
+        "type" : "string",
+        "enum" : [ "TRAM", "SUBWAY", "RAIL", "BUS", "FERRY", "CABLE_TRAM", "GONDOLA", "FUNICULAR", "REPLACEMENT_BUS", "AIR", "OTHER" ]
       },
       "Violation" : {
         "type" : "object",
